# CineSequence

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  progress.md  railway.json
backend/: .coverage  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  metrics.py  security.py
backend/app/data/: archetypes.json  character_profiles.json  groups_seed.json  movie_pool.json  movie_pool_reviews.json  phase1_pair_reviews.json  phase1_pairs.json  tag_taxonomy.json  ticket_styles.json
backend/app/models/: __init__.py  ai_token_log.py  dna_profile.py  group.py  group_message.py  match.py  match_message.py  notification.py  payment_order.py  pick.py  sequencing_entitlement.py  sequencing_session.py  theater_list.py  user.py  user_entitlement.py  user_favorite_movie.py  waitlist_entry.py
backend/app/routers/: _group_helpers.py  admin.py  auth.py  dev_auth.py  dna.py  group_messages.py  group_theaters.py  groups.py  match_messages.py  matches.py  notifications.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: backfill_archetypes.py  backfill_personal_tickets.py  backfill_personality_readings.py  backfill_theater_list_items.py  check_theater_lists.py  seed_groups.py  validate_tmdb_ids.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_dna.py  test_email_notifications.py  test_groups_router.py  test_main.py  test_matches.py  test_notifications.py  test_profile.py  test_sequencing_router.py
(+425 files in other folders)
