[project]
name = "cine-sequence-api"
version = "0.1.0"
description = "Cine Sequence — Backend API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests that should not require external services",
    "integration: tests that exercise the app with database or service dependencies",
]
